--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,3 @@
-# ทุกครั้งที่คุณ commit & push โค้ดขึ้น main → GitHub จะสร้าง Docker image เวอร์ชันใหม่ให้อัตโนมัติ
-
 name: ci-build-push
 
 on:
@@ -7,39 +5,41 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE: ${{ github.repository }}/hello   # => tanvanat/learn-gitop/hello
+
 jobs:
   build-push:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
       - uses: actions/checkout@v4
-
       - uses: docker/setup-buildx-action@v3
 
-      # ล็อกอิน GHCR (ถ้าใช้ Docker Hub ให้เปลี่ยนเป็น docker.io และเปลี่ยน secrets)
-      - uses: docker/login-action@v3
+      - name: Login GHCR
+        uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # สร้างแท็ก 2 แบบ: sha7 และ latest
       - name: Prepare tags
-        id: prep
-        run: |
-          SHA=${GITHUB_SHA::7}
-          echo "TAG_SHA=$SHA" >> $GITHUB_OUTPUT
-          echo "TAG_LATEST=latest" >> $GITHUB_OUTPUT
+        id: vars
+        run: echo "SHA_SHORT=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
-      # Build & Push โดยใช้ context = โฟลเดอร์ my-docker-app
-      - name: Build & Push image
+      - name: Build & Push (:dev + :main-<sha>)
         uses: docker/build-push-action@v6
         with:
           context: ./my-docker-app
           push: true
+          no-cache: true
           tags: |
-            ghcr.io/${{ github.repository }}:${{ steps.prep.outputs.TAG_SHA }}
-            ghcr.io/${{ github.repository }}:${{ steps.prep.outputs.TAG_LATEST }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE }}:dev
+            ${{ env.REGISTRY }}/${{ env.IMAGE }}:main-${{ steps.vars.outputs.SHA_SHORT }}
+          labels: |
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+
