--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,21 +11,26 @@ permissions:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE: ${{ github.repository }}/hello   # => tanvanat/learn-gitop/hello
+  IMAGE: ${{ github.repository }}/hello   # => ghcr.io/tanvanat/learn-gitop/hello
 
 jobs:
   build-push:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
 
-      - name: Login GHCR
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # ใช้ PAT ของ owner เพื่อกันปัญหา scope
+      - name: Login to GHCR (with PAT)
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.repository_owner }}        # สำคัญ: owner ของ repo
+          password: ${{ secrets.GHCR_TOKEN }}             # PAT: write:packages
 
       - name: Prepare tags
         id: vars
