--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,15 +3,16 @@ name: ci-build-push
 on:
   push:
     branches: [ "main" ]
+  pull_request:
   workflow_dispatch:
 
 permissions:
   contents: read
-  packages: write
+  packages: write   # required for GITHUB_TOKEN -> GHCR
 
 env:
   REGISTRY: ghcr.io
-  IMAGE: ${{ github.repository }}/hello   # => ghcr.io/tanvanat/learn-gitop/hello
+  IMAGE: ${{ github.repository }}/hello   # => ghcr.io/<owner>/<repo>/hello
 
 jobs:
   build-push:
@@ -24,27 +25,27 @@ jobs:
       - name: Setup Buildx
         uses: docker/setup-buildx-action@v3
 
-      # ใช้ PAT ของ owner เพื่อกันปัญหา scope
-      - name: Login to GHCR (with PAT)
+      # Login with built-in GITHUB_TOKEN (no PAT needed)
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.repository_owner }}        # สำคัญ: owner ของ repo
-          password: ${{ secrets.GHCR_TOKEN }}             # PAT: write:packages
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Prepare tags
         id: vars
         run: echo "SHA_SHORT=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
-      - name: Build & Push (:dev + :main-<sha>)
+      - name: Build & Push (:sha-XXXXXXX + :main + :dev)
         uses: docker/build-push-action@v6
         with:
           context: ./my-docker-app
-          push: true
-          no-cache: true
+          push: ${{ github.event_name != 'pull_request' }}  # push on main/workflow_dispatch
           tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE }}:sha-${{ steps.vars.outputs.SHA_SHORT }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE }}:main
             ${{ env.REGISTRY }}/${{ env.IMAGE }}:dev
-            ${{ env.REGISTRY }}/${{ env.IMAGE }}:main-${{ steps.vars.outputs.SHA_SHORT }}
-          labels: |
-            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
