--- a/my-docker-app/Dockerfile
+++ b/my-docker-app/Dockerfile
@@ -1,9 +1,13 @@
 FROM node:20-alpine
+
 WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN npm ci || npm i --only=production
 COPY . .
-EXPOSE 3000
-HEALTHCHECK CMD wget -qO- http://localhost:3000 || exit 1
-LABEL org.opencontainers.image.source=https://github.com/tanvanat/learn-gitop
-CMD ["node","app.js"]
+
+# build args สำหรับ invalidate digest
+ARG BUILD_DATE
+ARG COMMIT_SHA
+LABEL build_date=$BUILD_DATE commit_sha=$COMMIT_SHA
+
+RUN npm ci || npm install
+CMD ["node", "app.js"]
+
