--- a/infra-repo/clusters/my-cluster/apps/hello/deployment.yaml
+++ b/infra-repo/clusters/my-cluster/apps/hello/deployment.yaml
@@ -15,12 +15,12 @@ spec:
       labels:
         app: hello
     spec:
-      # ถ้า GHCR เป็น private และมี secret ชื่อ ghcr-pull ใน namespace default ให้ uncomment:
-       imagePullSecrets:
-         - name: ghcr-pull
+      imagePullSecrets:
+        - name: ghcr-cred
       containers:
         - name: hello
-          image: ghcr.io/tanvanat/learn-gitop/hello:sha-0000000 # {"$imagepolicy": "flux-system:hello-policy"}
+          image: ghcr.io/tanvanat/learn-gitop/hello:sha-44d4755  # Flux จะมาเขียนทับได้ภายหลัง
+          imagePullPolicy: Always
           ports:
-            - name: http
-              containerPort: 3000
+            - containerPort: 3000
+
